--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -28,8 +28,9 @@
 
                 <ImageView
                     android:id="@+id/note_image"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:scaleType="centerCrop"
                     android:layout_gravity="center_horizontal"
                     android:src="@drawable/ic_image_outline_24"
                     android:contentDescription="@string/image_desc_image" />
@@ -37,22 +38,23 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:paddingStart="12dp"
+                    android:paddingEnd="2dp"
                     android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/tittleView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
                         android:textColor="@color/textColorDark"
                         android:textStyle="bold"
-                        android:textSize="20sp" />
+                        android:textSize="18sp" />
 
                     <TextView
                         android:id="@+id/dateView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="16dp"
                         android:textSize="14sp" />
 
                 </LinearLayout>
