--- a/app/src/main/res/layout/event_view_item.xml
+++ b/app/src/main/res/layout/event_view_item.xml
@@ -42,9 +42,9 @@
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_gravity="center"
-        android:layout_marginEnd="12dp"
+        android:layout_marginEnd="14dp"
         android:src="@drawable/ic_edit_24"
-        app:tint="@color/colorAccent"
+        app:tint="@color/md_yellow_900"
         tools:ignore="ContentDescription" />
 
     <ImageView
@@ -52,9 +52,9 @@
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_gravity="center"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="10dp"
         android:src="@drawable/ic_delete_24"
-        app:tint="@color/colorAccent"
+        app:tint="@color/md_red_800"
         tools:ignore="ContentDescription" />
 
 </LinearLayout>
