--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -23,13 +23,12 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/note_image"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
                     android:scaleType="centerCrop"
                     android:layout_gravity="center_horizontal"
                     android:src="@drawable/ic_image_outline_24"
@@ -38,8 +37,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingStart="12dp"
-                    android:paddingEnd="2dp"
+                    android:paddingHorizontal="10dp"
+                    android:paddingVertical="10dp"
                     android:orientation="vertical">
 
                     <TextView
@@ -54,7 +53,7 @@
                         android:id="@+id/dateView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginTop="12dp"
                         android:textSize="14sp" />
 
                 </LinearLayout>
